--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">oioioie baka</string>
-    <string name="open_drawer">Open Navigation Drawer</string>
-    <string name="close_drawer">Close Navigation Drawer</string>
+    <string name="app_name">UI SMARTHOME</string>
 </resources>
